# shortcut-lib

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  NOTICE  README.md  pyproject.toml
.claude/rules/: action-modelling.md  velocity-and-estimation.md
data/: jellycore_facts.json  observed_envelope_types.json
docs/: agent_tasks.md  coverage_dictionary.md  design-for-an-llm-consumer.md  format.md  handoff.md  known_identifiers.md  mcp.md  roadmap.md  schema-gaps.md  sf_batch6_audit.md  sources.md  wire-format-quirks.md  work_log.md
docs/architecture-review/: round1-evangelist.md  round1-llm-ux.md  round1-pythonic.md  round1-strategy.md  round1-tests.md  round1-types.md  round1-wire.md  round2-evangelist.md  round2-llm-ux.md  round2-pythonic.md  round2-strategy.md  round2-tests.md  round2-types.md  round2-wire.md  synthesis.md
docs/release-notes/: v1.0.md
evals/mcp/: README.md  _drivers.py  _grading.py  _stats.py  report.py  run_evals.py
examples/: VALIDATION_vault_note_to_git.md  control_flow_demo.py  dictate_to_clipboard.py  note_to_github.py  quick_pomodoro.py  share_to_inbox.py  spotlight_quick_task.py  vault_note_to_git.py  voice_note_to_git.py
samples/: add_expiry_reminder.shortcut  adjust_clipboard.shortcut  batch_add_reminders.shortcut  clean_up_clipboard.shortcut  combine_screenshots_and_share.shortcut  daily_standup.shortcut  dictate_to_clipboard.shortcut  dictionary.shortcut  email_last_image.shortcut  get_contents_of_url.shortcut  intelly.shortcut  markup_and_send.shortcut  read_later.shortcut  rename_files.shortcut  running_late.shortcut  set_weekend_chores.shortcut  sort_lines.shortcut  start_pomodoro.shortcut  tile_last_2_windows.shortcut  turn_text_into_audio.shortcut
samples/decoded/: add_expiry_reminder.xml  adjust_clipboard.xml  batch_add_reminders.xml  clean_up_clipboard.xml  combine_screenshots_and_share.xml  intelly.xml  (+14 more)
scripts/: coverage_report.py  decode_all.py  extract_jellycore.py  print_actions.py  scan_envelope_types.py
tests/: _wire_helpers.py  test_action_add_new_reminder.py  test_action_adjust_date.py  test_action_alert.py  test_action_ask.py  test_action_base64_encode.py  test_action_calculate_expression.py  test_action_choose_from_list.py  test_action_choose_from_menu.py  test_action_comment.py  test_action_count.py  test_action_date.py  test_action_detect_number.py  test_action_dictionary.py  test_action_download_url.py  test_action_exit_get_append.py  test_action_facts_no_upstream_naming.py  test_action_file_rename.py  test_action_filter_calendar_events.py  test_action_format_date.py  test_action_format_number.py  test_action_get_clipboard.py  test_action_get_directions.py  test_action_get_distance.py  test_action_get_item_from_list.py  test_action_get_last_photo.py  test_action_get_last_screenshot.py  test_action_get_text.py  test_action_get_travel_time.py  test_action_get_upcoming_events.py  test_action_list.py  test_action_make_spoken_audio.py  test_action_math.py  test_action_number.py  test_action_output.py  test_action_preview_document.py  test_action_random_number.py  test_action_reading_list.py  test_action_record_audio.py  test_action_resize_window.py  (+35 more)
(+165 files in other folders)
