[project]
name = "shortcut-lib"
version = "0.0.1"
description = "Decode and (eventually) author Apple Shortcuts files."
requires-python = ">=3.13"
authors = [{ name = "Findlay Webb" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "cryptography>=44",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0",
    "pydantic>=2.7",
]
evals = [
    "anthropic>=0.40",
]

[project.scripts]
shortcut-decode = "shortcut_lib.cli:decode_main"
shortcut-mcp = "shortcut_lib.mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shortcut_lib"]
# data/ holds the action-fact dataset bootstrapped from Open-Jellycore;
# it's a development-time artefact (used by scripts/coverage_report.py)
# and not needed at runtime, so it stays out of the wheel.
exclude = ["data/"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.12",
    "ty>=0.0.34",
]

# ── Ruff ─────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # ruff-specific rules
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = [
    "E501",   # line too long — formatter handles this
    "RET504", # unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"src/shortcut_lib/cli.py" = ["T201"]  # CLI tooling, print to stdout/stderr is expected
"scripts/**" = ["T201", "E402"]        # scripts use print; sys.path tweak before import is intentional
"examples/**" = ["T201"]               # examples are runnable scripts; print is fine
"evals/**" = ["T201"]                  # eval harness reports to stdout
"tests/**" = ["S101"]                  # assert is fine in tests
# Math action uses Apple's Unicode operator wire-format values (U+2212 MINUS,
# U+00D7 MULTIPLICATION, etc.). RUF001/RUF002 would fire on every literal and
# docstring reference; suppress them project-wide for these two files.
"src/shortcut_lib/schema/actions/math.py" = ["RUF001", "RUF002"]
"tests/test_action_math.py" = ["RUF001", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["shortcut_lib"]

# ── ty ───────────────────────────────────────────────────────────────

[tool.ty.environment]
root = ["src", "tests"]
python-version = "3.13"

# ── pytest ───────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
